--- a/ngLessonLocker/src/index.html
+++ b/ngLessonLocker/src/index.html
@@ -6,7 +6,8 @@
   <title>Lesson Locker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
 </head>
 
 <body>
