--- a/LessonLockerREST/src/main/resources/static/index.html
+++ b/LessonLockerREST/src/main/resources/static/index.html
@@ -13,6 +13,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-A7MJM4D4.js" type="module"></script><script src="scripts-EEEIPNC3.js" defer></script><script src="main-WCYDN2AJ.js" type="module"></script></body>
+<script src="polyfills-A7MJM4D4.js" type="module"></script><script src="scripts-EEEIPNC3.js" defer></script><script src="main-7ZQWPSS3.js" type="module"></script></body>
 
 </html>
